syntax = "proto3";
option csharp_namespace = "Proto";
package proto;

service PresetServiceProto {
  rpc CreatePreset(CreatePresetRequest) returns (CreatePresetResponse) {}
  rpc DeletePreset(DeletePresetRequest) returns (DeletePresetResponse) {}
  rpc GetPreset(GetPresetRequest) returns (GetPresetResponse) {}
  rpc ListPresets(ListPresetsRequest) returns (ListPresetsResponse) {}
  rpc UpdatePreset(UpdatePresetRequest) returns (UpdatePresetResponse) {}
}

message PresetObj {
  int32 Id = 1;
  string Name = 2;
  float MinHumidity = 3;
  float MaxHumidity = 4;
  float  MinCo2 = 5;
  float  MaxCo2 = 6;
  float MinTemperature = 7;
  float MaxTemperature = 8;
  string deviceId = 9;
}

message CreatePresetRequest {
  PresetObj preset = 1;
}

message CreatePresetResponse {
  PresetObj preset = 1;
}

message DeletePresetRequest {
  string Id = 1;
}

message DeletePresetResponse {
  string Id = 1;
}

message GetPresetRequest {
  string Id = 1;
}

message GetPresetResponse {
  PresetObj preset = 1;
}

message ListPresetsRequest {
  int32 Limit = 1;
}

message ListPresetsResponse {
  repeated PresetObj presets = 1;
}

message UpdatePresetRequest {
  PresetObj preset = 1;
}

message UpdatePresetResponse {
  PresetObj preset = 1;
}

